tests/rt/neg/ifc/lclear-taint1.trp
let val main = self () 
    fun f1 () = send (main, 1); send (main, 2)
    val _ = spawn (f1)
    val c = raisembox `{alice}`
    val _ = debugpc()
    val u = rcv (`{}`, `{alice}`, [hn x => x]) 
    val _ = debugpc ()
    val v = rcv (`{}`, `{}`, [hn x => x ])
in adv v
end